# legisinfo-server

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  buf.gen.yaml  buf.yaml  docker-compose.yml  pyproject.toml
proto/legisinfo/v1/: legisinfo.proto
src/legisinfo_server/: __init__.py  main.py  reader.py  services.py
src/legisinfo_server/pkg/: __init__.py  base.py
src/legisinfo_server/pkg/openapi/: __init__.py  services.py
tests/: test_server.py
tests/pkg/openapi/: test_services.py
