[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "legisinfo-server"
version = "0.1.0"
description = "FastAPI and ConnectRPC server for scraped LEGISinfo bills data"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Mathieu Leduc-Hamel" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "connectrpc>=0.10.1",
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/legisinfo_server"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []
