[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "legisinfo-server"
version = "0.1.0"
description = "FastAPI and ConnectRPC server for scraped LEGISinfo bills data"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Mathieu Leduc-Hamel" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "connectrpc>=0.10.1",
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "pytest>=8.0.0",
    "pre-commit>=3.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/legisinfo_server"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    "src/legisinfo_server/gen",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "C90", # mccabe complexity
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "T10", # flake8-debugger
    "T20", # flake8-print
    "ARG", # flake8-unused-arguments
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]
ignore = ["C901"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[dependency-groups]
dev = [
    "httpx2>=2.6.0",
]
